Nova versió beta. Afegit el component pjax, refet l'appcache, el·liminat els components google-map i activats els vídeos.

--- a/scripts/import-css-js.html
+++ b/scripts/import-css-js.html
@@ -15,6 +15,15 @@
     <!-- Custom Theme JavaScript -->
     <script src="/scripts/grayscale.min.js" async></script>
     <script src="/bower_components/appcache-autoupdate/appcache-nanny.min.js" async></script>
+    <script src="/bower_components/pjax/src/pjax.min.js" async></script>
+    <script type="text/javascript">
+      if (navigator.onLine) {
+        new Pjax({
+          elements: "a", // default is "a[href], form[action]"
+          selectors: ["title","meta",".sidebar-checkbox",".home-title",".mur-diari",".content"]
+        })
+      }
+    </script>
     <script type="text/javascript" src="/vendor/add-to-homescreen/addtohomescreen.min.js" async></script>
     <script>
     addToHomescreen();
