--- a/scripts/import-css-js.html
+++ b/scripts/import-css-js.html
@@ -15,12 +15,12 @@
     <!-- Custom Theme JavaScript -->
     <script src="/scripts/grayscale.min.js" async></script>
     <script src="/bower_components/appcache-autoupdate/appcache-nanny.min.js" async></script>
-    <script src="/bower_components/pjax/src/pjax.min.js" async></script>
+    <script src="/bower_components/pjax/src/pjax.min.js"></script>
     <script type="text/javascript">
       if (navigator.onLine) {
         new Pjax({
           elements: "a", // default is "a[href], form[action]"
-          selectors: ["title","meta",".sidebar-checkbox",".home-title",".mur-diari",".content"]
+          selectors: ["title","meta","section"]
         })
       }
     </script>
@@ -28,13 +28,10 @@
     <script>
     addToHomescreen();
     </script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46558953-10', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  <script>
+  var _gaq=[['_setAccount','UA-46558953-8'],['_trackPageview']];
+  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+  g.src='//www.google-analytics.com/ga.js';
+  s.parentNode.insertBefore(g,s)}(document,'script'));
+  </script>
