Recuperat el pjax via nagivator.onLine (corregida la url del component.

--- a/scripts/import-css-js.html
+++ b/scripts/import-css-js.html
@@ -28,7 +28,7 @@
     </script>
     <script type="text/javascript">
       if (navigator.onLine) {
-        importScripts('/bower_components/cache-polyfill/dist/serviceworker-cache-polyfill.js');
+        importScripts('/bower_components/pjax/src/pjax.min.js');
         new Pjax({
           elements: "a", // default is "a[href], form[action]"
           selectors: ["title","meta","section"]
