--- a/scripts/import-css-js.html
+++ b/scripts/import-css-js.html
@@ -26,15 +26,14 @@
       }
     })(window, document);
     </script>
+    <script src="/bower_components/pjax/src/pjax.min.js"></script>
     <script type="text/javascript">
-      importScripts('/bower_components/pjax/src/pjax.min.js');
       if (navigator.onLine) {
         new Pjax({
           elements: "a", // default is "a[href], form[action]"
           selectors: ["title","meta","section"]
         })
       }
-    </script>
     <script type="text/javascript" src="/vendor/add-to-homescreen/addtohomescreen.min.js"></script>
     <script>
     addToHomescreen();
